--- a/classes/html/index.html
+++ b/classes/html/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="utf-8">
 
-    <title>HTML 101 ~ GDI SF</title>
+    <title>HTML 101</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="This is curriculum for the GDI SF HTML 101 workshop. It was adapted from the official Girl Develop It Core HTML/CSS curriculum">
+    <meta name="description" content="">
     <meta name="author" content="Girl Develop It San Francisco">
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -76,8 +76,8 @@
         <section>
           <h3>What is HTML?</h3>
           <p>HTML is the code that allows us to build websites</p>
-          <p>If you 'view the source' or type CMD+ALT+i, you see this</p>
-          <img src = "img/homepage-html.png" alt="Screenshot of the Girl Develop It page source code">
+          <p>If you 'view the source' or type CMD+ALT+u, you see this</p>
+          <img src = "img/source-code.png" alt="Screenshot of page source code">
         </section>
 
         <!-- History of HTML-->
@@ -260,9 +260,9 @@
                 </li>
                 <li>
                   Values must be contained inside quotation marks.
-                  <pre><code class ="html">&lt;div id="copyright"&gt;&copy;Girl Develop It logo 2016&lt;/div&gt;
+                  <pre><code class ="html">&lt;div id="copyright"&gt;&copy;Cleo logo 2019&lt;/div&gt;
 &lt;img src="my_picture.jpg" /&gt;
-&lt;a href="http://girldevelopit.com"&gt;Girl Develop It&lt;/a&gt;</code></pre>
+&lt;a href="https://hicleo.com/"&gt;Cleo&lt;/a&gt;</code></pre>
                 </li>
               </ul>
             </li>
@@ -467,7 +467,7 @@ www.w3.org/TR/html4/loose.dtd"&gt;</code></pre>
             <li><strong>Absolute:</strong> paths refer to a specific location of a file, including the domain.</li>
             <ul>
               <li>Typically used when pointing to a link that is not within your own domain.</li>
-              <li>Example: <small><code>https://www.girldevelopit.com/chapters/san-francisco</code></small></li>
+              <li>Example: <small><code>https://hicleo.com/</code></small></li>
             </ul>
           </ul>
         </section>
