--- a/classes/html/index.html
+++ b/classes/html/index.html
@@ -76,7 +76,7 @@
         <section>
           <h3>What is HTML?</h3>
           <p>HTML is the code that allows us to build websites</p>
-          <p>If you 'view the source' or type CMD+ALT+u, you see this</p>
+          <p>If you 'view the source' or type CMD+OPT+u, you see this</p>
           <img src = "img/source-code.png" alt="Screenshot of page source code">
         </section>
 
