--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
           </div>
           <section class="about-me-info">
             <h1>Vanessa Archambault</h1>
-            <p>I'm a Senior Software Engineer at <a href="https://hicleo.com/" target="_blank"> Cleo</a>
+            <p>I'm an Engineering Manager at <a href="https://elevatesecurity.com/" target="_blank"> Elevate Security</a>
              <br>
-              and I'm CTO of <a href="http://techbychoice.org/" target="_blank"> Tech By Choice</a>
+              and on the Board of <a href="http://techbychoice.org/" target="_blank"> Tech By Choice</a>
             </p>
             <hr>
             <h5>I'm also involved with:</h5>
