--- a/stuff/birthday.html
+++ b/stuff/birthday.html
@@ -52,7 +52,7 @@
             color:lightseagreen;
             box-shadow: 0 0 5px -1px rgba(0,0,0,0.6);
         }
-        h3 {
+        h3, h5 {
             margin-bottom: 20px;
         }
 	</style>
@@ -63,6 +63,8 @@
 <div class="styled-button" onclick="new_item()">Pick a new item!</div>
 <h3 id="bingo"></h3>
 <div class="styled-button" onclick="go_back()">Go back one item</div>
+<div class="styled-button" onclick="verify()">Verify Bingo</div>
+<h5 id="verify"></h5>
 <div class="styled-button" onclick="init()">Reset Game</div>
 </div>
 <style type="text/css" style="display: none !important;">
